# nextjs-rust-redis

./: .gitignore  README.md  redis_configuration.md
api-services/: Cargo.toml
api-services/src/: main.rs  models.rs
src/pages/: index.tsx
src/pages/api/: movie.ts
