[package]
name = "api-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = "*"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dependencies.redis]
version = "*"
